# DataAnalysisPython

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.txt  main.py  pyproject.toml  requirements.txt  setup_dev.py  test_temperature_toolkit.py
temperature_toolkit/: README.txt  __init__.py  analytics.py  converter.py  record.py
